fixed alignment issues with flex

--- a/src/app/fitness-track/fitness-track.component.css
+++ b/src/app/fitness-track/fitness-track.component.css
@@ -1,23 +1,46 @@
+.fitness-top-div {
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box; 
+    box-shadow: 0 6px 16px 0 darkolivegreen;
+}
 .fitness-div {
     width: 20%; 
-    height: 100; 
-    display: inline-block; 
-    vertical-align: middle;
+    height: 90px; 
+    display: flex;
 }
+
+.fitness-h1-div {
+    width: 100%; 
+    height: 100%; 
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+}
+
+.fitness-h1-h2 {
+    color: darkolivegreen;
+}
+
+.fitness-i-top-div {
+    flex-direction: column;
+}
+
 .fitness-pic-div {
-    height: 70px; 
-    text-align: center; 
-    vertical-align: middle;
+    height: 60px; 
+    width: 100%; 
+    display: flex; 
+    justify-content: center;
+    align-items: center;
 }
 .fitness-h2-div {
-    text-align: center; 
-    vertical-align: middle; 
-    height: auto;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 }
 .fitness-i {
-    font-size: 50   px;
-    color: darkolivegreen; 
-    text-shadow:2px 2px 4px darkolivegreen; 
+    font-size: 50px;
+    color: darkolivegreen;  
     padding-top: 7px;
 }
 .fitness-i-font-size {
